--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
+    "cocoon": "github:nathanvda/cocoon#c24ba53",
     "imports-loader": "^0.8.0",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "jquery-validation": "^1.19.1",
     "js-autocomplete": "^1.0.4",
     "popper.js": "^1.16.1",
