--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^6.0.3-1",
     "@rails/webpacker": "4.2.2",
-    "bootstrap": "4.3.1",
+    "bootstrap": "^4.5.0",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "font-awesome": "^4.7.0",
     "imports-loader": "^0.8.0",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
-    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
     "jquery-validation": "^1.19.1",
     "js-autocomplete": "^1.0.4",
     "popper.js": "^1.16.1",
